--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,8 +1,5 @@
 {
-  "builds": [
-    { "src": "server/app.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "server/app.js" }
+  "rewrites": [
+      {"source": "/(.*)", "destination": "/"}
   ]
 }
